--- a/src/Components/BlogForm/BlogForm.css
+++ b/src/Components/BlogForm/BlogForm.css
@@ -1,7 +1,7 @@
 form {
     padding: 20px;
     width: 600px;
-    margin: auto;
+    margin: 1.5em auto;
     text-align: center;
     border: 1px solid #ccc;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
